Upgrade of dependencies